sl-project/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blogging-system
  labels:
    name: blogging-system
