sl-project/notifier-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier-service
  labels:
    app: notifier-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier-service
  template:
    metadata:
      labels:
        app: notifier-service
    spec:
      containers:
        - name: notifier-service
          image: your-registry/notifier-service:latest  # TODO: 실제 이미지로 변경
          imagePullPolicy: IfNotPresent
