sl-project/blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  labels:
    app: blog-service
spec:
  type: ClusterIP
  selector:
    app: blog-service
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
