sl-project/subscriber-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscriber-service
  labels:
    app: subscriber-service
spec:
  type: ClusterIP
  selector:
    app: subscriber-service
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
